# NeonEngine

./: .gitignore  .gitmodules  README.md
neonEditor/: CMakeLists.txt
neonEditor/resources/scripts/: dub.json  dub.selections.json
neonEditor/resources/scripts/source/: editor_system.d
neonEditor/src/: editorCamera.h  editorSystem.cpp  editorSystem.h  main.cpp
neonEditor/src/events/: inspectEvent.h
neonEditor/src/util/: propertyGrid.h
neonEditor/src/windows/: assetsWindow.cpp  assetsWindow.h  editorViewportWindow.cpp  editorViewportWindow.h  editorWindow.h  gameWindow.cpp  gameWindow.h  propertiesWindow.cpp  propertiesWindow.h  sceneGraphWindow.cpp  sceneGraphWindow.h  viewportWindow.cpp  viewportWindow.h
neonEngine/: CMakeLists.txt
neonEngine/dependencies/glad/: CMakeLists.txt  extentions.txt
neonEngine/dependencies/glad/src/: glad.c
neonEngine/dependencies/stb/: CMakeLists.txt
neonEngine/include/neonEngine/: neonEngine.h
neonEngine/resources/: style.yaml
neonEngine/resources/shaders/: billboard.slang  equirectToCubemap.glsl  pbr.glsl  pbr.slang  skybox.glsl  skybox.slang  triangle.glsl
neonEngine/sdk/NeonManaged/: Class1.cs  NeonManaged.csproj
neonEngine/sdk/d/: .gitignore  dub.json
neonEngine/sdk/d/Neon/: dub.json
neonEngine/sdk/d/source/: bridge.d  neon_engine.d
neonEngine/sdk/modules/neon/: bridge.v  ecs.v  input.v  keycodes.v  log.v
neonEngine/src/: common.h  neonEngine.cpp  neonEngine.h
neonEngine/src/asset/: asset.h  assetDeserializer.h  assetHandle.h  assetID.h  assetImporter.h  assetLoader.h  assetManager.cpp  assetManager.h  assetRef.cpp  assetRef.h  assetSerializer.h  assetStream.h
neonEngine/src/asset/serializers/: imageSerializer.cpp  imageSerializer.h  prefabSerializerGLB.cpp  prefabSerializerGLB.h
neonEngine/src/asset/streams/: assetStream.h
neonEngine/src/audio/: audioClip.cpp  audioClip.h  audioClipImporter.cpp  audioClipImporter.h  audioCommand.h  audioManager.cpp  audioManager.h  audioSystem.cpp  audioSystem.h  sound.cpp  sound.h  soundHandle.cpp  soundHandle.h
neonEngine/src/audio/components/: audioSource.h
neonEngine/src/core/: coreSystem.cpp  coreSystem.h  engine.cpp  engine.h  event.h  eventManager.cpp  eventManager.h  prefab.cpp  prefab.h  prefabSerializerGLB.cpp  prefabSerializerGLB.h  scene.cpp  scene.h  sceneManager.cpp  sceneManager.h  system.h
neonEngine/src/core/components/: parentComponent.h  tagComponent.h  transformComponent.cpp  transformComponent.h
neonEngine/src/core/ecs/: component.h  componentList.cpp  componentList.h  ecsSystem.h  entity.h  world.cpp  world.h
neonEngine/src/core/serializers/: sceneSerializer.cpp  sceneSerializer.h
neonEngine/src/debug/: assert.cpp  assert.h  assertAction.h  assertionException.h  logLevel.h  logger.cpp  logger.h  scopeTimer.cpp  scopeTimer.h
neonEngine/src/ecs/: componentArray.cpp  componentArray.h  componentList.h  componentManager.cpp  componentManager.h  ecsSystem.cpp  ecsSystem.h  entity.cpp  entity.h  entityID.cpp  entityID.h  entityManager.cpp  entityManager.h  typeSet.h  world.cpp  world.h
neonEngine/src/ecs/components/: parentComponent.h  transformComponent.cpp  transformComponent.h
neonEngine/src/graphics/: frustum.cpp  frustum.h  graphicsSystem.cpp  graphicsSystem.h  guiSystem.cpp  guiSystem.h  imGuiSystem.cpp  imGuiSystem.h  image.cpp  image.h  materialShader.cpp  materialShader.h  mesh.cpp  mesh.h  meshSerializerGLB.cpp  meshSerializerGLB.h  postProcess.cpp  postProcess.h  renderSystem.cpp  renderSystem.h  renderTarget.cpp  renderTarget.h
neonEngine/src/graphics/api/: commandList.h  device.cpp  device.h  frameBuffer.h  graphicsPipeline.h  shader.h  texture.h  window.cpp  window.h
neonEngine/src/graphics/assets/: materialShader.cpp  materialShader.h  mesh.cpp  textureData.h
neonEngine/src/graphics/backend/: backendAPIEnum.h  colorTarget.cpp  colorTarget.h  commandBuffer.cpp  commandBuffer.h  convertSDL.cpp  convertSDL.h  depthState.cpp  depthState.h  depthStencilTarget.cpp  depthStencilTarget.h  graphicsPipeline.cpp  graphicsPipeline.h  physicalDevice.cpp  physicalDevice.h  renderPass.cpp  renderPass.h  renderTargetsDescription.h  shader.cpp  shader.h  texture.cpp  texture.h  todo.md  vertexInputState.cpp  vertexInputState.h  window.cpp  window.h
neonEngine/src/graphics/components/: camera.cpp  camera.h  material.h  meshRenderer.h  pbrMaterial.cpp  pbrMaterial.h  pointLight.h
neonEngine/src/graphics/events/: dropFileEvent.h  quitEvent.h  rhiWindowEvent.h  windowResizeEvent.h
neonEngine/src/graphics/importers/: glbPrefabImporter.cpp  glbPrefabImporter.h  glbSceneImporter.cpp  glbSceneImporter.h  shaderImporter.cpp  shaderImporter.h  textureImporter.cpp  textureImporter.h
neonEngine/src/input/: input.cpp  input.h  inputSystem.cpp  inputSystem.h  keyCodes.h
neonEngine/src/rendering/: messageCallback.h  renderSystem.cpp  renderSystem.h  window.cpp  window.h
neonEngine/src/scripting/: scriptBridge.cpp  scriptBridge.h  scriptRuntimeInterface.cpp  scriptRuntimeInterface.h  scriptingSystem.cpp  scriptingSystem.h  testScript.v
neonEngine/src/util/: file.cpp  file.h  memory.h  string.cpp  string.h
neonRHI/: CMakeLists.txt
neonRHI/include/neonRHI/: neonRHI.h
neonRHI/src/: buffer.h  commandList.h  device.cpp  device.h  event.h  frameBuffer.h  graphicsPipeline.h  sampler.h  shader.h  texture.h  window.cpp  window.h
neonRHI/src/descriptions/: depthState.h  graphicsPipelineDescription.h  renderTargetsDescription.h  samplerDescription.h  textureDescription.h  vertexAttribute.h  vertexBufferBinding.h  vertexBufferDescription.h  vertexInputState.h  windowCreationOptions.h
neonRHI/src/enums/: backendAPI.h  cullMode.h  fillMode.h  indexFormat.h  loadOperation.h  mipmapFilter.h  primitiveType.h  shaderType.h  storeOperation.h  textureFilter.h  textureFormat.h  textureUsage.h  textureWrap.h
neonRHI/src/input/: keyCodes.h
neonRHI/src/util/: file.cpp  file.h  memory.h  string.cpp  string.h
sandboxApp/: CMakeLists.txt  CopyFile.cmake  gameSystem.cpp  gameSystem.h  main.cpp
sandboxApp/resources/models/: sphere.glb
(+118 files in other folders)
